# remote

./: .gitignore  PROTOCOL.md  README.md
.github/workflows/: release.yml
desktop/: index.html  package-lock.json  package.json  vite.config.js
desktop/src/: App.jsx  index.css
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: auth.rs  discovery.rs  input.rs  lib.rs  server.rs  stream.rs
mobile/: App.tsx  app.json  index.ts  package-lock.json  package.json  tailwind.config.js  upload.keystore
mobile/components/: Azerty.tsx
mobile/lib/: connection.ts  discovery.ts  haptics.ts  settings.ts  ui.ts
mobile/screens/: Connect.tsx  Keyboard.tsx  Settings.tsx  Trackpad.tsx  View.tsx
mobile/scripts/: inject-signing.js
scripts/: release.sh
