[package]
name = "desktop"
version = "0.1.0"
description = "Remote keyboard & mouse server"
authors = ["you"]
edition = "2021"

[lib]
name = "desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
enigo = "0.3"
tungstenite = "0.24"
local-ip-address = "0.6"
gethostname = "0.5"
xcap = "0.9.6"
image = { version = "0.25.10", default-features = false, features = ["jpeg"] }
rand = "0.10.2"
