[package]
name = "desktop"
version = "0.1.0"
description = "Remote keyboard & mouse server"
authors = ["you"]
edition = "2021"

[lib]
name = "desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

# Optimize in dev builds — unoptimized image resize/jpeg + our own RGBA->RGB
# glue loop make screen encoding ~10x slower. opt-level 2 on the app crate
# vectorizes the pixel loop; deps go to 3.
[profile.dev]
opt-level = 2

[profile.dev.package."*"]
opt-level = 3

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
enigo = "0.3"
tungstenite = "0.24"
local-ip-address = "0.6"
gethostname = "0.5"
xcap = "0.9.6"
image = { version = "0.25.10", default-features = false, features = ["jpeg"] }
rand = "0.10.2"
qrcode = { version = "0.14.1", default-features = false, features = ["svg"] }
hmac = "0.13.0"
sha2 = "0.11.0"
fast_image_resize = "6.0.0"
jpeg-encoder = { version = "0.7.0", features = ["simd"] }
